# Full-stack-webapllication

Full-stack-webapllication/: LICENSE  README.md  app.py  db.py  pyproject.toml  replit_zip_error_log.txt
Full-stack-webapllication/templates/: home.html  product.html
